--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "main": "main.js",
   "name": "pane-relief",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
@@ -7,6 +6,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "monkey-around": "^2",
     "obsidian-rollup-presets": "github:pjeby/obsidian-rollup-presets",
     "rollup": "^2.38.1"
   }
