--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "devDependencies": {
     "monkey-around": "^2.1",
+    "obsidian": "^0.12",
     "obsidian-rollup-presets": "github:pjeby/obsidian-rollup-presets",
-    "rollup": "^2.38.1"
+    "rollup": "^2.38.1",
+    "typescript": "4.1.3"
   }
 }
