New feature: Smart Maximize!
Pane Relief now works as a powerful replacement for the Maximize Active
Pane plugin, that supports multiple windows and works with Hover Editor.

When you use Pane Relief's maximize command, it works correctly
regardless of workspace layout, and doesn't hide all your main
panes when focused in a hover editor.  In addition, if you use the
command in a hover editor with only one pane, it will maximize or
restore that hover editor.  (Or if you have multiple panes, it will
act like a miniature maximize within that hover editor.)

Last, but not least, you can maximize panes or popovers in any window,
(if you're using Obsidian 0.15.3) without affecting any other windows.

See the README for more info

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8",
     "monkey-around": "^2.3.0",
+    "node-sass": "^5",
     "obsidian": "0.14.5",
     "obsidian-rollup-presets": "github:pjeby/obsidian-rollup-presets",
     "rollup": "^2.38.1",
