--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,13 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "esModuleInterop": true,
-    "module": "ESNext",
+    "module": "Node16",
+    "noEmit": true,
     "target": "ES2018",
     "allowJs": true,
+    "allowImportingTsExtensions": true,
     "noImplicitAny": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "importHelpers": true,
     "jsx": "react",
     "jsxFactory": "el",
